rely on sublime settings to download packages

--- a/setup.yml
+++ b/setup.yml
@@ -523,116 +523,7 @@
       get_url:
         url: https://packagecontrol.io/Package%20Control.sublime-package
         dest: ~/.config/sublime-text-3/Installed Packages/Package Control.sublime-package
-      when: sublime_package_control.stat.exists == False
-      tags: [ ide ]
-
-    - name: All - Sublime git update ApplySyntax
-      diff: false
-      git:
-        repo: https://github.com/facelessuser/ApplySyntax.git
-        dest: ~/.config/sublime-text-3/Packages/ApplySyntax
-      tags: [ ide ]
-    - name: All - Sublime git update Docker
-      diff: false
-      git:
-        repo: https://github.com/asbjornenge/Docker.tmbundle.git
-        dest: ~/.config/sublime-text-3/Packages/Docker.tmbundle
-      tags: [ ide ]
-    - name: All - Sublime git update EditorConfig
-      diff: false
-      git:
-        repo: https://github.com/sindresorhus/editorconfig-sublime.git
-        dest: ~/.config/sublime-text-3/Packages/EditorConfig
-      tags: [ ide ]
-    - name: All - Sublime git update FileIcons
-      diff: false
-      git:
-        repo: https://github.com/braver/FileIcons.git
-        dest: ~/.config/sublime-text-3/Packages/FileIcons
-      tags: [ ide ]
-    - name: All - Sublime git update SublimeJEDI
-      diff: false
-      git:
-        repo: https://github.com/srusskih/SublimeJEDI.git
-        dest: ~/.config/sublime-text-3/Packages/Jedi - Python autocompletion
-      tags: [ ide ]
-    - name: All - Sublime git update Jinja2
-      diff: false
-      git:
-        repo: https://github.com/kudago/jinja2-tmbundle.git
-        dest: ~/.config/sublime-text-3/Packages/jinja2-tmbundle
-      tags: [ ide ]
-    - name: All - Sublime git update JSON ReIndent
-      diff: false
-      git:
-        repo: https://github.com/ThomasKliszowski/json_reindent.git
-        dest: ~/.config/sublime-text-3/Packages/json_reindent
-      tags: [ ide ]
-    - name: All - Sublime git update Python Fix Imports
-      diff: false
-      git:
-        repo: https://github.com/Stibbons/python-fiximports.git
-        dest: ~/.config/sublime-text-3/Packages/Python Fix Imports
-      tags: [ ide ]
-    - name: All - Sublime git update StGitlab
-      diff: false
-      git:
-        repo: https://github.com/tosher/StGitlab.git
-        dest: ~/.config/sublime-text-3/Packages/StGitlab
-      tags: [ ide ]
-    - name: All - Sublime git update Sublime-NGINX
-      diff: false
-      git:
-        repo: https://github.com/brandonwamboldt/sublime-nginx.git
-        dest: ~/.config/sublime-text-3/Packages/sublime-nginx
-      tags: [ ide ]
-    - name: All - Sublime git update SublimeLinter
-      diff: false
-      git:
-        repo: https://github.com/SublimeLinter/SublimeLinter.git
-        dest: ~/.config/sublime-text-3/Packages/SublimeLinter
-      tags: [ ide ]
-    - name: All - Sublime git update SublimeLinter-flake8
-      diff: false
-      git:
-        repo: https://github.com/SublimeLinter/SublimeLinter-flake8.git
-        dest: ~/.config/sublime-text-3/Packages/SublimeLinter-flake8
-      tags: [ ide ]
-    - name: All - Sublime git update SublimeLinter-rubocop
-      diff: false
-      git:
-        repo: https://github.com/SublimeLinter/SublimeLinter-rubocop.git
-        dest: ~/.config/sublime-text-3/Packages/SublimeLinter-rubocop
-      tags: [ ide ]
-    - name: All - Sublime git update SublimeLinter-shellcheck
-      diff: false
-      git:
-        repo: https://github.com/SublimeLinter/SublimeLinter-shellcheck.git
-        dest: ~/.config/sublime-text-3/Packages/SublimeLinter-shellcheck
-      tags: [ ide ]
-    - name: All - Sublime git update Sublime INI
-      diff: false
-      git:
-        repo: https://github.com/clintberry/sublime-text-2-ini.git
-        dest: ~/.config/sublime-text-3/Packages/sublime-text-2-ini
-      tags: [ ide ]
-    - name: All - Sublime git update Sublime GIT
-      diff: false
-      git:
-        repo: https://github.com/kemayo/sublime-text-git.git
-        dest: ~/.config/sublime-text-3/Packages/sublime-text-git
-      tags: [ ide ]
-    - name: All - Sublime git update Sublime Terraform
-      diff: false
-      git:
-        repo: https://github.com/alexlouden/Terraform.tmLanguage.git
-        dest: ~/.config/sublime-text-3/Packages/Terraform.tmLanguage
-      tags: [ ide ]
-    - name: All - Sublime git update Sublime TOML
-      diff: false
-      git:
-        repo: https://github.com/jasonwilliams/sublime_toml_highlighting.git
-        dest: ~/.config/sublime-text-3/Packages/TOML
+      when: not sublime_package_control.stat.exists
       tags: [ ide ]
 
     ### --------------------- Dotfiles ---------------------------------------
