add dlint for static security checks on python

--- a/setup.yml
+++ b/setup.yml
@@ -386,6 +386,7 @@
         extra_args: --user
         name:
           - aws-credentials
+          - dlint
           - flake8
           - flake8-docstrings
           - flake8-import-order
