move python3-dbus to ansible tasks

--- a/setup.yml
+++ b/setup.yml
@@ -179,6 +179,7 @@
         name: &common_packages
           - docker-ce
           - htop
+          - python3-dbus
           - sublime-merge
           - sublime-text
           - sysstat # iostat
