--- a/setup.yml
+++ b/setup.yml
@@ -1,5 +1,7 @@
 ---
 - hosts: localhost
+  vars:
+    docker_compose_version: 1.25.4
   tasks:
     - name: debug info
       debug:
@@ -12,7 +14,7 @@
         url: https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg
         state: present
       when: ansible_os_family == 'Debian'
-      tags: [ dev, repo ]
+      tags: [ dev, repo, docker ]
     - name: Debian - Add Docker repo
       become: true
       apt_repository:
@@ -20,7 +22,7 @@
         filename: docker
         state: present
       when: ansible_os_family == 'Debian'
-      tags: [ dev, repo ]
+      tags: [ dev, repo, docker ]
     - name: Debian - Add Sublime-Text signing key
       become: true
       apt_key:
@@ -55,7 +57,7 @@
         gpgcheck: yes
         gpgkey: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
       when: ansible_os_family == 'RedHat'
-      tags: [ dev, repo ]
+      tags: [ dev, repo, docker ]
     - name: RedHat - Add Google Cloud SDK repository
       become: true
       yum_repository:
@@ -188,7 +190,7 @@
         state: present
         update_cache: yes
       when: ansible_os_family == 'Debian'
-      tags: [ dev ]
+      tags: [ dev, docker ]
 
     - name: RedHat - Install common packages
       become: true
@@ -359,19 +361,19 @@
         mode: +x
       tags: [ dev ]
 
-    - name: All - Install docker-compose 1.25.0
+    - name: All - Install docker-compose {{ docker_compose_version }}
       become: true
       get_url:
-        url: "https://github.com/docker/compose/releases/download/1.25.0/docker-compose-{{ ansible_system }}-{{ ansible_machine }}"
+        url: "https://github.com/docker/compose/releases/download/{{ docker_compose_version }}/docker-compose-{{ ansible_system }}-{{ ansible_machine }}"
         dest: /usr/local/bin/docker-compose
-      tags: [ dev ]
+      tags: [ dev, docker ]
 
     - name: All - Enable execue for docker-compose
       become: true
       file:
         path: /usr/local/bin/docker-compose
         mode: +x
-      tags: [ dev ]
+      tags: [ dev, docker ]
 
     - name: All - add user to docker group, use zsh
       become: true
@@ -380,7 +382,7 @@
         append: yes
         groups: docker
         shell: /usr/bin/zsh
-      tags: [ dev ]
+      tags: [ dev, docker ]
 
     - name: All - pip install dev tools
       no_log: true
@@ -470,6 +472,15 @@
       become: true
       systemd:
         name: dnf-automatic.timer
+        enabled: yes
+        state: started
+        daemon_reload: yes
+      when: ansible_os_family == 'RedHat'
+      tags: [ never, system, systemd ]
+    - name: RedHat - Enable docker
+      become: true
+      systemd:
+        name: docker.service
         enabled: yes
         state: started
         daemon_reload: yes
