--- a/setup.yml
+++ b/setup.yml
@@ -410,7 +410,7 @@
           - ipdb
           - ipython
           - jedi
-          - keyring
+          - keyring<21.0.0,>=20.0.1
           - pdbpp
           - pep8-naming
           - poetry
