fix poetry depends by updating pyexpect

--- a/setup.yml
+++ b/setup.yml
@@ -416,6 +416,7 @@
           - keyring<21.0.0,>=20.0.1
           - pdbpp
           - pep8-naming
+          - pexpect<5.0.0,>=4.7.0
           - poetry<2.0.0,>=1.0.5
           - pre-commit<3.0.0,>=1.21.0 # 2.0.0 drops support for python 3.5
           - six
