--- a/setup.yml
+++ b/setup.yml
@@ -268,6 +268,7 @@
           - curl
           - dkms
           - dnf-automatic
+          - flatpack
           - fuse-sshfs
           - gcc
           - gcc-c++
