--- a/setup.yml
+++ b/setup.yml
@@ -61,6 +61,7 @@
         enabled: yes
         gpgcheck: yes
         gpgkey: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
+        repo_gpgcheck: yes
       when: ansible_os_family == 'RedHat'
       tags: [ dev, repo, docker ]
     - name: RedHat - Add Google Cloud SDK repository
