Enable auto updates of flatpaks
Fixes: https://gitlab.com/perobertson/scripts/-/issues/52

--- a/setup.yml
+++ b/setup.yml
@@ -568,7 +568,7 @@
 
     ### ------------------ Userspace ---------------------------------
 
-    - import_tasks: flatpacks.yml
+    - import_tasks: tasks/flatpaks.yml
 
     ### ------------------ User Settings -----------------------------
 
