--- a/setup.yml
+++ b/setup.yml
@@ -470,7 +470,8 @@
           - pep8-naming
           - pexpect<5.0.0,>=4.7.0
           - poetry<2.0.0,>=1.0.5
-          - pre-commit<3.0.0,>=1.21.0 # 2.0.0 drops support for python 3.5
+          - pre-commit<3.0.0,>=2.4.0
+          - pycairo
           - six
           - termcolor<2.0.0,>=1.1.0
           - tldr
