--- a/setup.yml
+++ b/setup.yml
@@ -230,7 +230,9 @@
         pkg:
           - containerd.io
           - docker-ce-cli
+          - libcairo2-dev
           - libglib2.0-bin # gsettings
+          - pkg-config
         state: present
       when: ansible_os_family == 'Debian'
       tags: [ dev ]
@@ -471,7 +473,6 @@
           - pexpect<5.0.0,>=4.7.0
           - poetry<2.0.0,>=1.0.5
           - pre-commit<3.0.0,>=2.4.0
-          - pycairo
           - six
           - termcolor<2.0.0,>=1.1.0
           - tldr
@@ -496,6 +497,13 @@
           stderr: "{{ pip_out.stderr_lines }}"
       when: pip_out.changed
       tags: [ pip ]
+    - name: Ubuntu - Install pycairo
+      pip:
+        extra_args: --user
+        name:
+          - pycairo
+        state: latest
+      when: ansible_distribution == 'Ubuntu'
     - name: All - pip check
       command: pip check
       when: pip_out.changed
