mv python setup tasks into their own file

--- a/setup.yml
+++ b/setup.yml
@@ -440,75 +440,6 @@
         shell: /usr/bin/zsh
       tags: [ dev, docker ]
 
-    - name: All - pip install wheel
-      # Install wheel first which is needed to compile other packages
-      pip:
-        extra_args: --user
-        name:
-          - wheel
-        state: present
-      tags: [ pip ]
-    - name: All - pip install dev tools
-      no_log: true
-      pip:
-        extra_args: --user
-        name:
-          - ansible-lint<5.0.0,>=4.2.0
-          - awscli<2.0.0,>=1.18.21
-          - aws-credentials
-          - boto3<2.0.0,>=1.12.21
-          - diagrams
-          - dlint
-          - flake8<4.0.0,>=3.7.9
-          - flake8-annotations
-          - flake8-docstrings
-          - flake8-import-order
-          - importlib-metadata<1.2.0,>=1.1.3
-          - ipdb
-          - ipython<8.0.0,>=7.0.0
-          - jedi
-          - keyring<21.0.0,>=20.0.1
-          - pdbpp
-          - pep8-naming
-          - pexpect<5.0.0,>=4.7.0
-          - poetry<2.0.0,>=1.0.5
-          - pre-commit<3.0.0,>=2.4.0
-          - six
-          - termcolor<2.0.0,>=1.1.0
-          - tldr
-        state: latest
-      register: pip_out
-      ignore_errors: True
-      tags: [ pip ]
-    - name: All - pip debug install failure
-      command: pip --version
-      when: pip_out.failed
-      tags: [ pip ]
-    - name: All - pip show install failure
-      debug:
-        msg: "{{ pip_out.msg.split('\n') }}"
-      failed_when: true
-      when: pip_out.failed
-      tags: [ pip ]
-    - name: All - pip show installed
-      debug:
-        msg:
-          stdout: "{{ pip_out.stdout_lines }}"
-          stderr: "{{ pip_out.stderr_lines }}"
-      when: pip_out.changed
-      tags: [ pip ]
-    - name: Ubuntu - Install pycairo
-      pip:
-        extra_args: --user
-        name:
-          - pycairo
-        state: latest
-      when: ansible_distribution == 'Ubuntu'
-    - name: All - pip check
-      command: pip check
-      when: pip_out.changed
-      tags: [ pip ]
-
     - name: RedHat - Configure security updates
       become: true
       diff: true
@@ -530,5 +461,6 @@
     - import_tasks: tasks/user/dotfiles.yml
     - import_tasks: tasks/user/applications.yml
     - import_tasks: tasks/user/flatpaks.yml
+    - import_tasks: tasks/user/python.yml
     - import_tasks: tasks/user/ui.yml
     - import_tasks: tasks/user/ides.yml
