--- a/setup.yml
+++ b/setup.yml
@@ -8,41 +8,10 @@
         msg: "{{ ansible_facts }}"
       tags: [ never, debug ]
 
-    - name: Debian - Add Docker signing key
+    - name: Repositories
+      tags: [ system, dev, repo ]
       become: true
-      apt_key:
-        url: https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg
-        state: present
-      when: ansible_os_family == 'Debian'
-      tags: [ dev, repo, docker ]
-    - name: Debian - Add Docker repo
-      become: true
-      apt_repository:
-        repo: "deb [arch=amd64] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_lsb['codename'] }} stable"
-        filename: docker
-        state: present
-      when: ansible_os_family == 'Debian'
-      tags: [ dev, repo, docker ]
-    - name: Debian - Add Sublime-Text signing key
-      become: true
-      apt_key:
-        url: https://download.sublimetext.com/sublimehq-pub.gpg
-        state: present
-      when: ansible_os_family == 'Debian'
-      tags: [ dev, repo ]
-    - name: Debian - Add Sublime Text Repo
-      become: true
-      apt_repository:
-        repo: deb https://download.sublimetext.com/ apt/stable/
-        filename: sublime-text
-        state: present
-      when: ansible_os_family == 'Debian'
-      tags: [ dev, repo ]
-    - name: Ubuntu <18 - Add flatpak apt repository
-      become: true
-      apt_repository:
-        repo: ppa:alexlarsson/flatpak
-      when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version|int < 18
+      import_tasks: tasks/system/repositories.yml
 
     - name: RedHat - Add dnf plugins
       become: true
